--- a/cover.tex
+++ b/cover.tex
@@ -81,7 +81,7 @@
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{Professor Leslie A. Kolodziejski}{Chairman, Department Committee on Graduate Theses}
+\chairman{Leslie A. Kolodziejski}{Professor of Electrical Engineering and Computer Science \\ Chair, Department Committee on Graduate Students}
 
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
