add phd chapters and remove placeholders

--- a/main.tex
+++ b/main.tex
@@ -78,13 +78,19 @@ process all files:}
 % \include{signature}
 \pagestyle{plain}
 \include{contents}
-\include{chap1}
-\include{chap2}
-\include{chap3}
-\include{chap4}
-\include{chap5}
-\include{chap6}
-\include{chap7}
+%\include{chap1}
+%\include{chap2}
+%\include{chap3}
+%\include{chap4}
+%\include{chap5}
+%\include{chap6}
+%\include{chap7}
+\include{intro}
+\include{veil}
+\include{cobweb}
+\include{riverbed}
+\include{splinter}
+\include{conclusion}
 %\appendix
 %\include{appa}
 %\include{appb}
