--- a/biblio.tex
+++ b/biblio.tex
@@ -3,6 +3,6 @@
 %% this file to a `thebibliography' environment.  For more information 
 %% see section 4.3 of the LaTeX manual.
 \begin{singlespace}
-\bibliography{main}
+\bibliography{bibliography,n-str,n-conf,n}
 \bibliographystyle{unsrtnat}
 \end{singlespace}
