--- a/thesis.tex
+++ b/thesis.tex
@@ -314,7 +314,10 @@
 \let\subsection\section
 \let\section\chapter
 
-%\input{intro}
+\input{intro}
+\input{veil}
+\input{splinter}
+\input{concl}
 %\input{relwk}
 %\input{bkgrd}
 %\input{chl}
