--- a/abstract.tex
+++ b/abstract.tex
@@ -2,20 +2,13 @@ Web services, like Google, Facebook, and Dropbox,
 are a regular part of users' lives. 
 As a form of payment, these services
 collect, store, and analyze user data.
-Even accessing 
-these web services can leak a substantial
+Even accessing these web services can leak a substantial
 amount of data. 
 
-This dissertation presents two practical
-secure systems,
-Veil and Splinter, that
-prevents some of this data
-leakage. Veil protects 
-client-side data leakage
-through the browser by allowing
-web page developers to enforce stronger 
-private browsing semantics without
-browser support. Splinter keeps
-users' queries to web
-services private with minimal
-trust.
+This dissertation presents two practical,
+secure systems, Veil and Splinter, that
+prevents some of this data leakage. Veil protects 
+client-side data leakage through the browser by allowing
+web page developers to enforce stronger private browsing 
+semantics without browser support. Splinter keeps users' 
+queries to web services private with minimal trust.
