adds some motivation

--- a/abstract.tex
+++ b/abstract.tex
@@ -7,8 +7,10 @@ amount of data.
 
 This dissertation presents two practical,
 secure systems, Veil and Splinter, that
-prevents some of this data leakage. Veil protects 
-client-side data leakage through the browser by allowing
+prevents some of this data leakage. Veil minimizes
+client-side information leakage from the browser by allowing
 web page developers to enforce stronger private browsing 
-semantics without browser support. Splinter keeps users' 
-queries to web services private with minimal trust.
+semantics without browser support. Splinter protects
+sensitive information present in a users' query on cleartext datasets
+in a practical manner by leveraging a recent cryptographic
+primitive, Function Secret Sharing (FSS).
