adds veil stuff

--- a/intro.tex
+++ b/intro.tex
@@ -19,7 +19,7 @@ of channels where data can leak grows even more. Unfortunately,
 many times, these data leakages happen because web services
 lack practical, secure mechanisms to protect user data. 
 
-Many systems~\cite{mylar, cryptdb, opaque} 
+Many systems~\cite{mylar, popa:cryptdb, opaque} 
 have been built to prevent
 data leakage from the server, but
 the focus of this dissertation is on systems
@@ -27,7 +27,7 @@ that minimize data leakage on the client (Veil), specifically
 the browser, and that protect user in queries (Splinter).
 In the section below, we provide an overview of Veil and Splinter.
 
-\subsection{Our systems}
+\subsection{Our Systems}
 
 \subsubsection{Veil: Private Browsing Semantics without Browser-side Assistance}
 All popular web browsers offer a ``private browsing
