puts in all of veil and now time to add some more discussion on dynamic content

--- a/p.bib
+++ b/p.bib
@@ -1,3 +1,11 @@
+@inproceedings{opaque,
+  title={Opaque: An Oblivious and Encrypted Distributed Analytics Platform.},
+  author={Zheng, Wenting and Dave, Ankur and Beekman, Jethro G and Popa, Raluca Ada and Gonzalez, Joseph E and Stoica, Ion},
+  booktitle={NSDI},
+  pages={283--298},
+  year={2017}
+}
+
 @Misc{amazon-disc-pricing,
   author = {Adam Tanner},
   title = {{Different customers, Different prices, Thanks to big data}},
@@ -1686,13 +1694,6 @@
 	year = {2015},
 	month = {},
 	howpublished = {Microsoft Developer Network. \url{http://msdn.microsoft.com/en-us/hh563496.aspx}}
-}
-
-@misc{ab,
-	author = {{Apache Software Foundation}},
-	title = {{ab: Apache HTTP Server Benchmarking Tool}},
-	year = {2017},
-	howpublished = {\url{https://httpd.apache.org/docs/2.4/programs/ab.html}},
 }
 
 @misc{torStats,
