fixes dynamic content discussion in veil to address committee concerns/questions, so it seems to be set for now. moving onto splinter

--- a/p.bib
+++ b/p.bib
@@ -1,3 +1,20 @@
+@inproceedings{polaris,
+  title={Polaris: Faster Page Loads Using Fine-grained Dependency Tracking.},
+  author={Netravali, Ravi and Goyal, Ameesh and Mickens, James and Balakrishnan, Hari},
+  booktitle={NSDI},
+  pages={123--136},
+  year={2016}
+}
+
+@inproceedings{flywheel,
+  title={Flywheel: Google's Data Compression Proxy for the Mobile Web.},
+  author={Agababov, Victor and Buettner, Michael and Chudnovsky, Victor and Cogan, Mark and Greenstein, Ben and McDaniel, Shane and Piatek, Michael and Scott, Colin and Welsh, Matt and Yin, Bolian},
+  booktitle={NSDI},
+  volume={15},
+  pages={367--380},
+  year={2015}
+}
+
 @inproceedings{opaque,
   title={Opaque: An Oblivious and Encrypted Distributed Analytics Platform.},
   author={Zheng, Wenting and Dave, Ankur and Beekman, Jethro G and Popa, Raluca Ada and Gonzalez, Joseph E and Stoica, Ion},
