fixes some references and starts splinter writing

--- a/p.bib
+++ b/p.bib
@@ -194,7 +194,7 @@
   publisher={Citeseer}
 }
 
-@incollection{fss,
+@inproceedings{fss,
   title={{Function secret sharing}},
   author={Boyle, Elette and Gilboa, Niv and Ishai, Yuval},
   crossref={EUROCRYPT15},
@@ -519,7 +519,7 @@
   year={2010}
 }
 
-@incollection{gilboa2014distributed,
+@inproceedings{gilboa2014distributed,
   title={{Distributed point functions and their applications}},
   author={Gilboa, Niv and Ishai, Yuval},
   crossref={EUROCRYPT14},
