--- a/splinter.tex
+++ b/splinter.tex
@@ -96,3 +96,17 @@ In summary, our contributions are:
 	\item{An optimized FSS implementation for modern CPUs.}
 	\item{An evaluation of Splinter on realistic applications.}
 \end{itemize}
+
+\subsection{Conclusion}
+\label{sec:conclusion}
+Splinter is a new private query system that protects sensitive parameters
+in SQL-like queries while scaling to realistic applications. Splinter uses and extends a recent
+cryptography primitive, Function Secret Sharing (FSS),
+allowing it to achieve up to an order of magnitude better
+performance compared to previous private query systems. We develop
+protocols to execute complex queries
+with low computation and bandwidth. As a proof of concept,
+we have evaluated Splinter with three sample applications---a Yelp clone,
+map routing, and flight search---and showed
+that Splinter has low response times from 50 ms to 1.6 seconds with low
+hosting costs.
