adds some more stuff to the splinter part of the thesis

--- a/p.bib
+++ b/p.bib
@@ -479,7 +479,7 @@
   pages={93--122},
 }
 
-@incollection{ostrovsky2007survey,
+@inproceedings{ostrovsky2007survey,
   title={{A survey of single-database private information retrieval: Techniques and applications}},
   author={Ostrovsky, Rafail and Skeith III, William E},
   booktitle={Public Key Cryptography (PKC)},
@@ -487,7 +487,7 @@
   year={2007},
 }
 
-@incollection{olumofin2011revisiting,
+@inproceedings{olumofin2011revisiting,
   title={{Revisiting the computational practicality of private information retrieval}},
   author={Olumofin, Femi and Goldberg, Ian},
   booktitle={Financial Cryptography and Data Security},
